Fixed the home button alignment for the story page

--- a/pages/story.css
+++ b/pages/story.css
@@ -14,7 +14,7 @@ img{
     margin:0px;
     padding:0px;
 }
-#home{
+#Home{
     float:right;
 }
 #logo{
